Server & client side

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-PORT='8085'
-API_BATTLENET_KEY='ce8df521280e4df6b47cda395335bc69'
-API_BATTLENET_SECRET='HMA8Tj1jPlkfwizZZ1MaE35D2YVCiGhF'
+NEXT_PUBLIC_API_BATTLENET_KEY=ce8df521280e4df6b47cda395335bc69
+NEXT_PUBLIC_API_BATTLENET_SECRET=HMA8Tj1jPlkfwizZZ1MaE35D2YVCiGhF
+API_BATTLENET_KEY=ce8df521280e4df6b47cda395335bc69
+API_BATTLENET_SECRET=HMA8Tj1jPlkfwizZZ1MaE35D2YVCiGhF
