--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "blizzapi": "^2.6.0",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "express": "^4.18.2",
+    "mongoose": "^7.3.0",
     "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0"
