--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongoose": "^7.3.0",
     "next": "13.4.2",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   }
