--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-router-dom": "^6.13.0"
   }
 }
