--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "bcrypt": "^5.1.0",
     "blizzapi": "^2.6.0",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
