--- a/package.json
+++ b/package.json
@@ -9,17 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.0.1",
     "blizzapi": "^2.6.0",
     "body-parser": "^1.20.2",
+    "connect-mongo": "^4.5.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "eslint": "8.40.0",
-    "eslint-config-next": "13.4.2",
+    "eslint-config-next": "^12.0.4",
     "express": "^4.18.2",
+    "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.3.0",
     "next": "13.4.2",
     "passport": "^0.6.0",
