--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-jwt": "^8.4.1",
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^7.3.0",
     "next": "13.4.2",
     "passport": "^0.6.0",
