--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "blizzapi": "^2.6.0",
     "body-parser": "^1.20.2",
     "connect-mongo": "^4.5.0",
@@ -31,6 +32,7 @@
     "passport-local": "^1.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.13.0"
   }
 }
