--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.0",
     "jwt-decode": "^3.1.2",
+    "marked": "^5.1.1",
     "mongoose": "^7.3.0",
     "next": "13.4.2",
     "passport": "^0.6.0",
@@ -33,6 +34,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.13.0"
   }
 }
